# payoff-diagram-web

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  ENGINE_ARCHITECTURE.md  ENHANCED_CHART_LAYOUT_FEATURE.md  PHASE1_PLAN.md  POSITION_TOGGLE_FEATURE.md  Project.md  README.md  ROADMAP.md  SETUP_SUMMARY.md  WEB3_DATA_MODEL_ARCHITECTURE.md  index.html  rustfmt.toml
assets/: api_key_styles.css  main.css
examples/: portfolio_export_example.csv  portfolio_export_example.json
proxy-server/: Cargo.toml
proxy-server/src/: main.rs
src/: lib.rs  main.rs
src/components/: api_key_form.rs  api_key_list.rs  api_key_manager.rs  api_tester.rs  app.rs  chart_controls.rs  data_import_dialog.rs  mod.rs  payoff_chart.rs  portfolio_manager.rs  portfolio_manager_broken.rs  portfolio_manager_new.rs  portfolio_manager_old.rs  portfolio_manager_simple.rs  position_form.rs  position_list.rs  position_sync_dialog.rs
src/components/chart_engine/: canvas_engine.rs  chart_selector.rs  mod.rs  svg_engine.rs
src/engine/: mod.rs  payoff_engine.rs  portfolio_engine.rs  validation_engine.rs
src/models/: api_keys.rs  import_data.rs  mod.rs  payoff.rs  position.rs  web3_data.rs
src/utils/: browser_file.rs  export.rs  import.rs  local_storage.rs  mod.rs  web3_export_import.rs
