[package]
name = "payoff-diagram-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Window",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "Navigator",
    "Clipboard",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

# Chart dependencies (to be used later)
# plotters = { version = "0.3", default-features = false, features = ["wasm", "canvas"] }
# plotters-canvas = "0.3"
