[package]
name = "payoff-diagram-web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Window",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "Navigator",
    "Clipboard",
    "Event",
    "EventTarget",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Storage",
    "CryptoKey",
    "SubtleCrypto",
    "AesKeyGenParams",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.51"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
